--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,8 +9,8 @@
 </p>
 
 <p>
-  <b>Title:</b>
-  <%= @post.title %>
+  
+  <h1><%= @post.title %></h1>
 </p>
 
 <p>
@@ -21,9 +21,46 @@
   <b>Location:</b>
   <%= @post.location %>
 </p>
+<p>
+______________________________________________________________
+</p>
 
+<h1> Comments </h1>
+<% @post.comments.each do |comment| %>
+	<p>
+		<b>Commenter:</b>
+		<%= comment.commenter %>
+	</p>
+	
+	<p>
+		<b>Comment:</b>
+		<%= comment.body %>
+	</p>
+	
+	<p>
+	______________________________________________________________
+	</p>
+<% end %>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<h1> Add a comment </h1>
+<%= form_for([@post, @post.comments.build]) do |f| %>
+	<div class = "field">
+	<%= f.label :commenter %><br />
+	<%= f.text_field :commenter %>
+	</div>
+	
+	<div class = "field">
+	<%= f.label :body %><br />
+	<%= f.text_field :body %>
+	</div>
+	
+	<div class = "actions">
+		<%= f.submit %>
+		</div>
+	
+	<% end %>
+	
+	<%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
 </div>
 <div align=center>
